# ZZZManager

./: .gitattributes  AGENTS.md  CONTEXT.md  README.md  README.zh-CN.md  components.json  index.html  package.json  pnpm-lock.yaml  skills-lock.json  vite.config.ts
.agents/skills/tdd/: SKILL.md
.github/workflows/: release.yml
docs/adr/: 0001-provider-adapter-strategy.md  0002-runtime-only-balance-checks.md  0003-sqlite-for-local-data-and-credentials.md  0004-rust-service-layer-with-sqlx.md
scripts/: bump-version.mjs  export-app-metadata.mjs  release.mjs
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_app_settings.sql  0003_check_defaults.sql  0004_notification_hooks.sql  0005_credentialless_placeholders.sql  0006_custom_http_adapter.sql  0007_account_official_url.sql  0008_account_note_sort_order.sql  0009_notification_hook_type.sql  0010_notification_locale.sql  0011_notification_cooldown.sql  0012_normalize_account_sort_order.sql  0013_scheduler_enabled.sql  0014_rename_default_user_agent.sql  0015_account_balance_conversion.sql
src-tauri/src/: about.rs  accounts.rs  commands.rs  config_io.rs  db.rs  error.rs  hooks.rs  lib.rs  main.rs  models.rs  notifications.rs  overview.rs  providers.rs  schedule.rs  scheduler.rs  settings.rs
src/components/: AccountForm.tsx  AccountsView.tsx  HistoryView.tsx  OverviewView.tsx  SchedulesView.tsx  SettingsView.tsx  UpdateAvailableDialog.tsx  WebhooksView.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  sheet.tsx  tooltip.tsx
src/lib/: api.ts  app-metadata.ts  format.tsx  i18n.tsx  theme.tsx
