[package]
name = "zzz-balance-monitor"
version = "1.1.1"
description = "Desktop balance monitor for AI gateway accounts, thresholds, and webhooks."
authors = ["zhoushi1"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zzz_balance_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
# `system-proxy` is REQUIRED for ProxyMode::System to honor the OS proxy on
# Windows/macOS. It is normally a default feature, but default-features = false
# turns it off, so it must be listed explicitly. Do NOT remove it — see
# providers::build_client and the build_client_system_mode_succeeds test.
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks", "system-proxy"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

